--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-        <img src="/Imagenes/Imagen.png" id="image">
+        <img src="/Flujo-critico-secciones-prismaticas/Imagenes/Imagen.png" id="image">
     
     <h1>Cálculo de la profundidad crítica secciones prismáticas</h1><br>
 
